Citations till EAS

--- a/thesis_skel/thesis_EAS.tex
+++ b/thesis_skel/thesis_EAS.tex
@@ -68,6 +68,7 @@ Apart from the shower maximum and the number of muons at ground other observable
 $X_0$ and $\lambda$ can be estimated by fitting the profile based on the above function and depend on the composition and energy of the primary. $N_{max}$ is the number of particles observed at $X_{max}$. The integral of the longitudinal development profile gives an estimate of the total calorimetric energy deposited by the shower. 
 The point where the shower axis vector intersects the ground is called the \textit{shower core}. Shower axis is thus defined by the zenith $\theta$, azimuth $\phi$ and the shower core position. If one looks at the shower head on the large thin disc like appearance consisting of highly energetic particles is called the \textit{shower front}. The shape is due to the path length differences between the shower particles travelling away from the shower axis to the one travelling in the direction of the shower axis. The disc is thus thinner near the shower core and widens away from it. As the shower front intersects the ground, the density and the timing of the particles detected at the detector form what is called the \textit{shower footprint}. It is the primary observable used by a ground level EAS detector to measure and characterise the shower. The arrival time of the particles in the footprint can help determine the shower geometry whereas the density can be used to reconstruct the energy of the primary. The density is estimated as a function of the radial distance from the shower core on the ground, by the \textit{lateral distribution function} (LDF). The modern LDF function is an extension on the parameterisation given by Greisen~\cite{annurev:/content/journals/10.1146/annurev.ns.10.120160.000431} and by Kamata and Nishimura~\cite{10.1143/PTPS.6.93} and is given as:
 \begin{equation}
+    \label{eq:Lateral_dist_func}
     \rho_e(r) = \frac{N_e}{2 \pi R_M^2} C(s) \biggl(\frac{r}{R_M}\biggr)^{(s-2)}\biggl(\frac{r}{R_M}+1\biggr)^{(s-4.5)}
 \end{equation}
 
@@ -78,35 +79,36 @@ Another important characteristic of an EAS are its universality features first p
 \begin{equation}
     s = \frac{3}{1+2 X_{max}/X}
 \end{equation}
-This feature is a result of the nature of the development of the cascade process which hides the initial primary dependent fluctuations~\cite{}. Simulations have used such a universal feature to fit shower profiles reasonably well independent of the primary mass and energy~\cite{Bridgeman:2017MD}. Air shower universality only holds for air showers induced by gamma rays, electrons, or positrons and breaks down for a hadronic cascade. It can still be used if each individual component of the shower can be disentangled. Although, not applicable for this study, Universality is an important characteristic of the shower and has been used to estimate the proton-air cross-secton~\cite{Ulrich_2009} and other CR studies~\cite{cazon2024protonairinteractionsultrahighenergies}.
+This feature is a result of the nature of the development of the cascade process which hides the initial primary dependent fluctuations~\cite{Fedosimova:2017vxz}. Simulations have used such a universal feature to fit shower profiles reasonably well independent of the primary mass and energy~\cite{Bridgeman:2017MD}. Air shower universality only holds for air showers induced by gamma rays, electrons, or positrons and breaks down for a hadronic cascade. It can still be used if each individual component of the shower can be disentangled. Although, not applicable for this study, Universality is an important characteristic of the shower and has been used to estimate the proton-air cross-secton~\cite{Ulrich_2009} and other CR studies~\cite{cazon2024protonairinteractionsultrahighenergies}.
 
 \section{Detection}
 \label{sec:EAS_det}
-At high energies due to the low flux EAS offer the best way to detect CRs. Low cost ground based detectors can be spread over large areas offering a cost effective way to study UHECRs. The shower can be seen through different emissions such as the Cherenkov, fluorescence and radio. The particles arriving at ground can also be directly detected. The different emissions which can be detected in context of EAS are described in this section along with an expected EAS signatures of a neutrino induced EAS which relates to the analysis presented in this thesis.
+At high energies due to the low flux EAS offer the best way to detect CRs. Low cost ground based detectors can be spread over large areas offering a cost-effective way to study UHECRs. The shower can be seen through different emissions such as the Cherenkov, fluorescence and radio. The particles arriving at ground can also be directly detected. The different emissions which can be detected in context of EAS are described in this section along with an expected EAS signatures of a neutrino induced EAS which relates to the analysis presented in this thesis.
 
 \subsection*{Fluorescence Detection}
 \label{sec:EAS_flu}
-The phenomenon of fluorescence emitted by air showers above $10^{17}$eV, known as "atmospheric fluorescence," involves the production of faint optical and ultraviolet (UV) light by the interaction of high-energy particles from extensive air showers with the nitrogen molecules in Earth's atmosphere. The energy levels of the nitrogen molecules determine the wavelengths of light that are emitted. The UV light emitted during the de-excitation process is typically in the near-ultraviolet range. The number of photons emitted directly correlates to the energy deposited by the shower particles. At altitudes between 5 and 10 km the yield has a height dependent rate of 4-5 photons per meter per charged particle. The photons can be seen at large distances up to 35km. The measurement of the light intensity through fluorescence telescopes with the help of the geometry of the shower axis offers a way to reconstruct the longitudinal profile of the shower and a subsequent energy estimation of the primary. Fluorescence telescopes are limited in their operational duty cycle which is about 10-15 \% since they can only be operated on clear moonless nights. A proper recosntruction of shower variables via the emitted fluorescence light also requires a constant monitoring of the atmosphere to account for light yield corrections. The pioneering fluorescence light detection of EAS include experiments at Volcano Ranch~\cite{} and Fly Eye experiment~\cite{}. Currently, this technique is also used at the the Pierre Auger Observatory and the Telescope Array.
+The phenomenon of fluorescence emitted by air showers above $10^{17}$eV, known as "atmospheric fluorescence", involves the production of faint optical and ultraviolet (UV) light by the interaction of high-energy particles from extensive air showers with the nitrogen molecules in Earth's atmosphere. The energy levels of the nitrogen molecules determine the wavelengths of light that are emitted. The UV light emitted during the de-excitation process is typically in the near-ultraviolet range. The number of photons emitted directly correlates to the energy deposited by the shower particles. At altitudes between 5 and 10 km, the yield has a height dependent rate of 4-5 photons per meter per charged particle. The photons can be seen at large distances up to 35 km. The measurement of the light intensity through fluorescence telescopes with the help of the geometry of the shower axis offers a way to reconstruct the longitudinal profile of the shower and a subsequent energy estimation of the primary. Fluorescence telescopes are limited in their operational duty cycle which is about 10-15 \% since they can only be operated on clear moonless nights. A proper reconstruction of shower variables via the emitted fluorescence light also requires constant monitoring of the atmosphere to account for light yield corrections. The pioneering fluorescence light detection of EAS include experiments at Volcano Ranch~\cite{1977PhRvL..39..847B} and Fly Eye experiment~\cite{BALTRUSAITIS1985410,BALTRUSAITIS198887}. Currently, this technique is also used at the Pierre Auger Observatory and the Telescope Array (TA).
 
 
 \subsection*{Cherenkov Detection}
 \label{sec:EAS_cher}
-Charged particles moving through the atmosphere can also produce Cherekov light~\cite{}. The EAS can be either detected via Imaging Cherenkov telescopes(IACTs) which can detect showers between 20GeV -100 TeV and are used for gamma ray astronomy. For CRs non-imaging Cherenkov detectors can be set up akin to a ground based particle detector array. Since the cherenkov cone is collimated around the shower axis the detectors need to be located with small spacing between them. For eg. For a particle at 10km height The Cherenkov cone has a radius of 120m. This property and the similar operational limitations like the fluorescence detection make this a not viable technique to detect UHECRs. For UHECRs due to the low flux the a ground based Cherenkov detector array will require a very large number of detectors and will still only have a duty cycle of 10-15\%. The currently operational experiments using the non-imaging Cherenkov technique for EAS detection include Yakutsk~\cite{} and Tunka~\cite{} etc. IACTs are very popular for gammma-ray astronomu and multimessenger detections with H.E.S.S.~\cite{}, MAGIC~\cite{} and CTA~\cite{} currently operational. 
+Charged particles moving through the atmosphere can also produce Cherenkov light~\cite{Cherenkov:1934ilx}. The EAS can be either detected via Imaging Cherenkov telescopes (IACTs) which can detect showers between 20 GeV -100 TeV or non-imaging Cherenkov detectors can be set up akin to a ground based particle detector array. Both are techniques are used for both gamma-ray astronomy and CR studies. Since the Cherenkov cone is collimated around the shower axis the detectors need to be located with small spacing between them. For e.g. for a particle at 10 km height, the Cherenkov cone has a radius of 120 m. This property and the similar operational limitations akin to the fluorescence detection for the IACTs, makes this technique impractical to detect UHECRs. The currently operational experiments using the non-imaging Cherenkov technique for EAS detection include Yakutsk~\cite{DYAKONOV1986224} and Tunka~\cite{KUZMICHEV2020161830} etc. IACTs are very popular for gamma-ray astronomy and multimessenger detections with H.E.S.S.~\cite{Puhlhofer:2024fjx}, MAGIC~\cite{cortina2009technicalperformancemagictelescopes} and CTA~\cite{2018_CTAO} currently operational. 
 
 \subsection*{Radio Detection}
-\label{sec:EAS_cher}
-An EAS traversing through the atmosphere can also produce radio signals. The radio emission can be due to the geomagnetic field~\cite{} or the Askaryan effect~\cite{} described before. For air showers the emission due to the geomagnetic effect is supposed to dominate with the Askaryan effectonly contributing in the order of 10-15\%~\cite{}. This affect arises due to the deflection of electrons and positrons produced in the shower leading to the formation of an electron dipole moving through the atmosphere at the speed of light. This results in a forward focussed radio signal with a lateral distribution similar to Cherenkov emission. The radio signal depends on the orientation of geomagnetic field and the atmospheric conditions at the detector. Around 100 m from the shower core the expected frequencies are in the MHz range~\cite{} while near the shower core they are in the GHz range. For such frequencies and primary energies >$10^{17}$eV the emissions from the two different mechanisms is superimposed. The measured electric field scales with the primary energy of the shower.  Typically, to detect radio emission of an EAS several radio antennas are deployed over a wide surface area. These antennas are triggered by particle detector arrays. Self triggering is also being developed which will make the radi antennas a seperate functional unit for EAS detection. Some e.g. of currently operational radio antenna arrays for EAS detection include LOFAR~\cite{} and AERA~\cite{}. The Pierre Auger Observatory is also adding a radio antenna on each unit of their particle detector array which is supposed to become operational by 2024. Other planned experiments include GRAND~\cite{}. Neutrino observatories like RNO-G~\cite{} and IceCube-Gen-2~\cite{} could also potentially detect EAS.  
+\label{sec:EAS_rad}
+An EAS traversing through the atmosphere can also produce radio signals. The radio emission can be due to the geomagnetic field~\cite{1966RSPSA.289..206K} or the Askaryan effect~\cite{Askaryan:1961pfb} described before. For air showers the emission due to the geomagnetic effect is supposed to dominate with the Askaryan effect only contributing in the order of 10-15\%~\cite{osti_4100652}. This affect arises due to the deflection of electrons and positrons produced in the shower leading to the formation of an electric dipole moving through the atmosphere at the speed of light. This results in a forward focussed radio signal with a lateral distribution similar to Cherenkov emission. The radio signal depends on the orientation of geomagnetic field and the atmospheric conditions at the detector. Around 100 m from the shower core the expected frequencies are in the MHz range~\cite{Huege_2016} while near the shower core they are in the GHz range. For such frequencies and primary energies >$10^{17}$eV the emissions from the two different mechanisms is superimposed. The measured electric field scales with the primary energy of the shower. Typically, to detect radio emission of an EAS several radio antennas are deployed over a wide surface area. These antennas are triggered by particle detector arrays. Self triggering is also being developed which will make the radio antennas a standalone functional unit for EAS detection. Some e.g. of currently operational radio antenna arrays for EAS detection include LOFAR~\cite{2013A&A...556A...2V} and AERA~\cite{PhysRevD.93.122005}. The Pierre Auger Observatory is also adding a radio antenna on each unit of their particle detector array which is supposed to become operational by 2024. Other planned experiments include GRAND~\cite{fang2017giantradioarrayneutrino}. Neutrino observatories like RNO-G~\cite{Aguilar_2021} and IceCube-Gen-2~\cite{Aartsen_2021_Gen-2} could also potentially detect EAS.  
 
 \subsection*{Particle detector arrays}
-\label{sec:EAS_cher}
-This is one of the oldest detection techniques used to measure and study cosmic rays. It consists of setting up a set of particle detectors spaced by large distances depending on the desired energy range sensitivity of the experiment which is also dependent on the altitude of the experiment. The detectors are usually arranged in a regular pattern, and they are able to detect the secondary particles of EAS at ground by searching for time coincidences between neighbouring stations. By measuring the signal and time delay between the triggered stations the incoming direction of the primary can be estimated to $1-0.5^{\circ}$ of resolution. The core position can also be determined by using the lateral distribution function to fit the recorded signal at the surface detector array. The energy can also be estimated through the measurement of number of muons at ground or cross calibration with other detector systems. Different types of detection methods have been used to combine and act as particle detector arrays. These include Geiger counters at MIT~\cite{}, hodoscopes at ...~\cite{}, scintillators at Volcano ranch~\cite{} and water or ice based Cherenkov detector. Currently scintillator based surface detector arrays and water/ice based Cherenkov tanks are the popularly used EAS detection techniques. 
+\label{sec:EAS_particle}
+This is one of the oldest detection techniques used to measure and study CRs. It consists of setting up a set of particle detectors (stations) spaced by large distances, depending on the desired energy range sensitivity of the experiment which is also dependent on the altitude of the experiment. The detectors are usually arranged in a regular pattern, and they are able to detect the secondary particles of EAS at ground by searching for time coincidences between neighbouring stations. By measuring the signal and time delay between the triggered stations the incoming direction of the primary can be estimated to $1-0.5^{\circ}$ of zenith resolution. The core position can also be determined by using the lateral distribution function (eq.~\ref{eq:Lateral_dist_func}) to fit the recorded signal at the surface detector array. The energy can also be estimated through the measurement of number of muons at ground or cross calibration with other detector systems. Different types of detection methods have been used to combine and act as particle detector arrays. These include Geiger counters at Harwell~\cite{1953Natur.171..349G}, hodoscopes at Kiel~\cite{1965ICRC....2..738B}, scintillators at Volcano ranch~\cite{Linsley1961485} and water or ice based Cherenkov detector. Currently, scintillator based surface detector arrays and water OR ice based Cherenkov tanks are the popularly used EAS detection techniques. 
 
-Water/ice based Cherenkov tanks/detectors can also detect the secondary particles of EAS at ground. These are sensitive to the Cherenkov light which can be produced by these charged particles while travelling through the medium of the detector. The subsequent light is measured using a PMT~\cite{}. This ight signature is different depending on the type of the particle and thus can effectively help in differentiating between muons and electrons. The Pierre Auger Observatory uses an array of water Cherenkov tanks in conjunction with four fluorescence detectors for EAS measurements. IceCube also contains an array of ice based Cherenkov detectors which are used for cosmic ray studies and as a veto for their underground neutrino detectors. MOre details about the Pierre AUger Observatory are presented in chapter~\ref{}
+Water/ice based Cherenkov tanks/detectors can also detect the secondary particles of EAS at ground. These are sensitive to the Cherenkov light which can be produced by these charged particles while travelling through the medium of the detector. The subsequent light is measured using a photomultiplier tube (PMT). This light signature is different depending on the type of the particle and thus can effectively help in differentiating between muons and electrons. The Pierre Auger Observatory uses an array of water Cherenkov tanks in conjunction with four fluorescence detectors for EAS measurements. IceCube also contains an array of ice based Cherenkov detectors which are used for cosmic ray studies and as a veto for their underground neutrino detectors. More details about the Pierre Auger Observatory are presented in the next chapter~\ref{chap:setup}
 
-Scintillator based particle detector arrays can be used to distinguish between the different secondary particles of an EAS. These consist of scintillating material which produced detectable photons if a charged particle traverses through the material. If deployed at the surface such detectors can act as excellent discriminators for electron and muons whereas if deployed underground they can only detect muons. The size of the scintillating material controls the zenith angle sensitivity which typically decreases the more inclined the shower is. TA uses a vast array of scintillator based detectors along with three fluorescence detectors to measure EAS. The Pierre Auger Observatory is also testing an array of underground muon detectors which are based directly below its surface array stations.
+Scintillator based particle detector arrays can be used to distinguish between the different secondary particles of an EAS. These consist of scintillating material which produced detectable photons if a charged particle traverses through the material. If deployed at the surface, such detectors can act as excellent discriminators for electron and muons whereas if deployed underground they can only detect muons. The size of the scintillating material controls the zenith angle sensitivity which typically decreases as the inclination of the shower increases. TA uses a vast array of scintillator based detectors along with three fluorescence detectors to measure EAS. The Pierre Auger Observatory is also testing an array of underground muon detectors which are situated directly below its surface array stations.
 
 
 \subsection*{Towards detecting Neutrino Induced Extensive Air Showers}
-Neutrino induced air showers have a particular expected signature. These showers are supposed to start much deeper in the atmosphere in comparison to ordinary cosmic ray showers, in particular proton showers which act as the primary background for their detection. The deeper interaction means less shower development till the shower front reaches the ground in comparison to a cosmic ray induced EAS. This difference in development can be measured by the muon to electron ratio at ground via a particle detector array. Since, the neutrinos are only expected to interact to induce a EAS if the volume of the atmosphere through which they traverse is large enough for zenith angles less than $60^{\circ}$ either the neutrinos are not expected to interact or and even if they do, due to the general amount of atmospheric volume at these angles the cosmic ray showers are supposed to be indistinguishable from a neutrino shower at least for a particle detector array at ground. This is due to the fact that the cosmic ray showers have not developed enough to lose the electromagnetic component of the induced EAS. This leaves the primary distinguishing factor i.e. the muon to electron ratio the same for neutrino and cosmic ray induced showers. The terminology used to determine the development of the shower in the atmosphere is the shower age and typically showers having a larger muonic component at ground are called \textit{old showers} while showers having a larger electromagnetic component at ground are called \textit{young showers}. 
+\label{sec:EAS_nu}
+Neutrino induced air showers can be differentiated from a regular CR induced EASs by their unique signature. These showers are supposed to start much deeper in the atmosphere in comparison to ordinary CR showers, in particular proton showers which act as the primary background for their detection. The deeper interaction means less shower development till the shower front reaches the ground in comparison to a cosmic ray induced EAS. This difference in development can be measured by the muon to electron ratio at ground via a particle detector array. Since, the neutrinos are only expected to interact to induce an EAS if the volume of the atmosphere through which they traverse is large enough, for zenith angles less than $60^{\circ}$ either the neutrinos are not expected to interact till they reach the ground or and even if they do, due to the general amount of atmospheric volume at these angles the CR induced EASs are supposed to be indistinguishable from a neutrino shower, at least for a particle detector array at ground. This is due to the fact that the CR induced EASs have not developed enough to significantly reduce or lose their electromagnetic component. This leaves the primary distinguishing factor i.e. the muon to electron ratio the same for neutrino and CR induced EASs. The terminology used to determine the development of the shower in the atmosphere is the shower age and typically showers having a larger muonic component at ground are called \textit{old showers} while showers having a larger electromagnetic component at ground are called \textit{young showers}. 
 
-Thus, to detect a neutrino induced EAS using surface detector arrays the smoking gun signal is an inclined ($\approx$ zenith angle > $60^{\circ}$) "young" shower. A perfect neutrino induced EAS detector should have a good angular resolution and a large electron-muon signal separation. However, this signature also not completely background free. Such a signature can also be caused by deeply interacting cosmic ray primaries or highly energetic muons emitting bremsstrahlung photons both of which can also induce a young shower. B meson could also be misidentified as a neutrino as shown in ~\cite{}. Other processes such as low energy showers coincident with a EAS could also act as background for a neutrino detection. These have been studied in detail in ~\cite{} and are negated in the analysis through the techniques developed in the reference. 
+Thus, to detect a neutrino induced EAS using surface detector arrays the smoking gun signal is an inclined ($\approx$ zenith angle > $60^{\circ}$) "young" shower. A perfect neutrino air shower detector should have a good angular resolution and a large electron-muon signal separation. However, this signature also not completely background free. Such a signature can also be caused by deeply interacting CR primaries or highly energetic muons emitting bremsstrahlung photons both of which can also induce a young shower at large zenith angles. B meson could also be misidentified as a neutrino as shown in~\cite{article_b_MESONS}. Other processes such as low energy showers coincident with an EAS could also act as background for a neutrino detection. These have been studied in detail in ~\cite{gap_note_2013} and are negated in the analysis through the techniques developed in the reference. 
