--- a/thesis_skel/thesis_refs.bib
+++ b/thesis_skel/thesis_refs.bib
@@ -1973,6 +1973,16 @@ volume = {8},
 number = {10},
 pages = {1461},
 }
+@article{Fedosimova:2017vxz,
+  author  = {Fedosimova, Anastasiya and Kharchevnikov, Pavel and Lebedev, Igor and Temiraliev, Abzal},
+  editor  = {Pattison, B.},
+  title   = {{Applying universality in the development of cascade processes for the research of high energy cosmic particles in space experiments}},
+  doi     = {10.1051/epjconf/201614510004},
+  journal = {EPJ Web Conf.},
+  volume  = {145},
+  pages   = {10004},
+  year    = {2017}
+}
 @article{Bridgeman:2017MD,
   author  = {Bridgeman, Ariel},
   title   = {{Shower universality reconstruction of data from the Pierre Auger Observatory and validations with hadronic interaction models}},
@@ -2004,6 +2014,219 @@ pages = {1461},
   archiveprefix = {arXiv},
   primaryclass  = {astro-ph.HE},
   url           = {https://arxiv.org/abs/2406.08620}
+}
+@article{1977PhRvL..39..847B,
+  author   = {{Bergeson}, H.~E. and {Cassiday}, G.~L. and {Chiu}, T. -W. and {Cooper}, D.~A. and {Elbert}, J.~W. and {Loh}, E.~C. and {Steck}, D. and {West}, W.~J. and {Linsley}, J. and {Mason}, G.~W.},
+  title    = {{Measurement of light emission from remote cosmic-ray air showers}},
+  journal  = {Physical Review Letters},
+  keywords = {Cosmic Ray Showers, Light Emission, Optical Measurement, Cerenkov Radiation, Particle Trajectories, Radiant Flux Density, Scintillation Counters, Space Radiation},
+  year     = 1977,
+  month    = sep,
+  volume   = {39},
+  pages    = {847-849},
+  doi      = {10.1103/PhysRevLett.39.847},
+  adsurl   = {https://ui.adsabs.harvard.edu/abs/1977PhRvL..39..847B},
+  adsnote  = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@article{BALTRUSAITIS1985410,
+  title    = {The Utah Fly's Eye detector},
+  journal  = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume   = {240},
+  number   = {2},
+  pages    = {410-428},
+  year     = {1985},
+  issn     = {0168-9002},
+  doi      = {https://doi.org/10.1016/0168-9002(85)90658-8},
+  url      = {https://www.sciencedirect.com/science/article/pii/0168900285906588},
+  author   = {R.M. Baltrusaitis and R. Cady and G.L. Cassiday and R. Cooperv and J.W. Elbert and P.R. Gerhardy and S. Ko and E.C. Loh and M. Salamon and D Steck and P. Sokolsky},
+  abstract = {We report the details of the design, operation and performance of the University of Utah Fly's Eye detector which was built to record the passage of ultra-high energy cosmic rays through the atmosphere via atmospheric fluorescence. Emphasized in the presentation are (1) light production by charged particles in the atmosphere, (2) kinematics of an EAS as seen by the Fly's Eye, (3) signal to noise considerations and its impact on detector design, (4) details of detector hardware and software, (5) detector calibration, (6) techniques employed in measurement of shower longitudinal development profiles and primary particle energy, and (7) assessment of detector performance by a comparison of Monte Carlo and real data distributions.}
+}
+@article{BALTRUSAITIS198887,
+  title    = {The Fly's Eye detector: Present and future},
+  journal  = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume   = {264},
+  number   = {1},
+  pages    = {87-92},
+  year     = {1988},
+  issn     = {0168-9002},
+  doi      = {https://doi.org/10.1016/0168-9002(88)91107-2},
+  url      = {https://www.sciencedirect.com/science/article/pii/0168900288911072},
+  author   = {R.M. Baltrusaitis and G.L. Cassiday and R. Cooper and B.R. Dawson and J.W. Elbert and B.E. Fick and D.F. Liebing and E.C. Loh and P. Sokolsky and D. Steck},
+  abstract = {The operation and recent results of the Fly's Eye cosmic ray observatory are described. This detector observes ⩾ 1017 eV cosmic ray extensive air showers via air fluorescence. Results on the cosmic ray spectrum, composition and the ultrahigh energy neutrino flux, are presented. Plans for a next generation high resolution eye are described.}
+}
+@article{Cherenkov:1934ilx,
+  author       = {Cherenkov, P. A.},
+  title        = {{Visible luminescence of pure liquids under the influence of \ensuremath{\gamma}-radiation}},
+  reportnumber = {AEC-tr-2358},
+  doi          = {10.3367/UFNr.0093.196710n.0385},
+  journal      = {Dokl. Akad. Nauk SSSR},
+  volume       = {2},
+  number       = {8},
+  pages        = {451--454},
+  year         = {1934}
+}
+@article{DYAKONOV1986224,
+  title    = {The use of Cherenkov detectors at the Yakutsk cosmic ray extensive air shower array},
+  journal  = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume   = {248},
+  number   = {1},
+  pages    = {224-226},
+  year     = {1986},
+  issn     = {0168-9002},
+  doi      = {https://doi.org/10.1016/0168-9002(86)90518-8},
+  url      = {https://www.sciencedirect.com/science/article/pii/0168900286905188},
+  author   = {M.N. Dyakonov and S.P. Knurenko and V.A. Kolosov and D.D. Krasilnikov and F.F. Lischenyuk and I.E Sleptsov and S.I. Nikolsky},
+  abstract = {The Cherenkov detector used at the Yakutsk complex EAS array for the registration of Vavilov-Cherenkov light in extensive air showers from superhigh energy cosmic rays is described. The calibration method is shown. The method for the treatment of experimental data and results obtained from the Yakutsk array using the above detector are given.}
+}
+@article{KUZMICHEV2020161830,
+  title    = {Cherenkov EAS arrays in the Tunka astrophysical center: From Tunka-133 to the TAIGA gamma and cosmic ray hybrid detector},
+  journal  = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume   = {952},
+  pages    = {161830},
+  year     = {2020},
+  note     = {10th International Workshop on Ring Imaging Cherenkov Detectors (RICH 2018)},
+  issn     = {0168-9002},
+  doi      = {https://doi.org/10.1016/j.nima.2019.01.056},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0168900219301093},
+  author   = {L. Kuzmichev and I. Astapov and P. Bezyazeekov and A. Borodin and M. Brückner and N. Budnev and A. Chiavassa and O. Gress and T. Gress and O. Grishin and A. Dyachok and O. Fedorov and A. Gafarov and A. Garmash and V. Grebenyuk and A. Grinyuk and D. Horns and N. Kalmykov and Y. Kazarina and V. Kindin and V. Kiryuhin and P. Kirilenko and R. Kokoulin and K. Kompaniets and E. Korosteleva and V. Kozhin and E. Kravchenko and A. Kryukov and A. Lagutin and V. Lenok and B. Lubsandorzhiev and N. Lubsandorzhiev and R. Mirgazov and R. Mirzoyan and R. Monkhoev and E. Osipova and A. Pakharukov and A. Pan and M. Panasyuk and L. Pankov and A. Petrukhin and V. Poleschuk and M. Popesku and E. Popova and A. Porelli and E. Postnikov and V. Prosin and V. Ptuskin and A. Pushnin and R. Raikin and G. Rubtsov and E. Ryabov and Y. Sagan and V. Samoliga and Yu. Semeney and A. Silaev and A. Silaev and A. Sidorenkov and A. Skurikhin and M. Slunecka and A. Sokolov and C. Spiering and L. Sveshnikova and V. Tabolenko and B. Tarashansky and A. Tkachenko and L. Tkachev and M. Tluczykont and N. Ushakov and D. Voronin and R. Wischnewski and A. Zagorodnikov and D. Zhurov and V. Zurbanov and I. Yashin},
+  keywords = {Cosmic rays, Gamma-ray astronomy, EAS Cherenkov light array, Energy spectrum, IACT},
+  abstract = {One of the most informative methods of cosmic ray studies is the detection of Cherenkov light from extensive air showers (EAS). The primary energy reconstruction is possible by using the Earth’s atmosphere as a huge calorimeter. The EAS Cherenkov light array Tunka-133, with ∼3 km2 geometrical area, is taking data since 2009. Tunka-133 is located in the Tunka Astrophysical Center at ∼50 km west of Lake Baikal. This array allows us to perform a detailed study of the energy spectrum and the mass composition in the energy range from 6⋅1015eV to 1018eV. Most of the ongoing efforts are focused on the construction of the first stage of the detector TAIGA (Tunka Advanced Instrument for cosmic ray physics and Gamma Astronomy). The latter is designed for the study of gamma rays and charged cosmic rays in the energy range of 1013eV–1018eV. The TAIGA prototype will consist of ∼100 wide angle timing Cherenkov stations (TAIGA-HiSCORE) and three IACTs deployed over an area of ∼1 km2. The installation of the array is planned to be finished in 2019 while the data-taking can start already during the commissioning phase. The joint reconstruction of energy, direction, and core position of the imaging and non-imaging detectors will allow us to increase the distance between the IACTs up to 800 m, therefore providing a low-cost, highly sensitive detector. The relatively low cost together with the high sensitivity for energies ≥30–50 TeV make this pioneering technique very attractive for exploring galactic PeVatrons and cosmic rays. In addition to the Cherenkov light detectors we intend to deploy surface and underground muon detectors over an area of 1 km2 with a total area of about 1000 m2. The results of the first season of coincident operation of the first ∼4 m diameter IACT with an aperture of ∼10°with 30 stations of TAIGA-HiSCORE will be presented.}
+}
+@misc{cortina2009technicalperformancemagictelescopes,
+  title         = {Technical Performance of the MAGIC Telescopes},
+  author        = {Juan Cortina and Florian Goebel and Thomas Schweizer},
+  year          = {2009},
+  eprint        = {0907.1211},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.IM},
+  url           = {https://arxiv.org/abs/0907.1211}
+}
+@article{1966RSPSA.289..206K,
+  author  = {{Kahn}, F.~D. and {Lerche}, I.},
+  title   = {{Radiation from Cosmic Ray Air Showers}},
+  journal = {Proceedings of the Royal Society of London Series A},
+  year    = 1966,
+  month   = jan,
+  volume  = {289},
+  number  = {1417},
+  pages   = {206-213},
+  doi     = {10.1098/rspa.1966.0007},
+  adsurl  = {https://ui.adsabs.harvard.edu/abs/1966RSPSA.289..206K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@article{osti_4100652,
+title = {RADIO PULSES FROM EXTENSIVE AIR SHOWERS.},
+author = {Allan, H R and Clay, R W and Jones, J K},
+abstractNote = {},
+doi = {10.1038/2271116a0},
+url = {https://www.osti.gov/biblio/4100652}, journal = {Nature (London) 227: 1116-18 (12 Sep 1970).},
+place = {United Kingdom},
+year = {1970},
+month = {1}
+}
+@article{Huege_2016,
+  title     = {Radio detection of cosmic ray air showers in the digital era},
+  volume    = {620},
+  issn      = {0370-1573},
+  url       = {http://dx.doi.org/10.1016/j.physrep.2016.02.001},
+  doi       = {10.1016/j.physrep.2016.02.001},
+  journal   = {Physics Reports},
+  publisher = {Elsevier BV},
+  author    = {Huege, Tim},
+  year      = {2016},
+  month     = mar,
+  pages     = {1–52}
+}
+@article{2013A&A...556A...2V,
+  author        = {{van Haarlem}, M.~P. and {Wise}, M.~W. and {Gunst}, A.~W. and {Heald}, G. and {McKean}, J.~P. and {Hessels}, J.~W.~T. and {de Bruyn}, A.~G. and {Nijboer}, R. and {Swinbank}, J. and {Fallows}, R. and {Brentjens}, M. and {Nelles}, A. and {Beck}, R. and {Falcke}, H. and {Fender}, R. and {H{\"o}randel}, J. and {Koopmans}, L.~V.~E. and {Mann}, G. and {Miley}, G. and {R{\"o}ttgering}, H. and {Stappers}, B.~W. and {Wijers}, R.~A.~M.~J. and {Zaroubi}, S. and {van den Akker}, M. and {Alexov}, A. and {Anderson}, J. and {Anderson}, K. and {van Ardenne}, A. and {Arts}, M. and {Asgekar}, A. and {Avruch}, I.~M. and {Batejat}, F. and {B{\"a}hren}, L. and {Bell}, M.~E. and {Bell}, M.~R. and {van Bemmel}, I. and {Bennema}, P. and {Bentum}, M.~J. and {Bernardi}, G. and {Best}, P. and {B{\^\i}rzan}, L. and {Bonafede}, A. and {Boonstra}, A. -J. and {Braun}, R. and {Bregman}, J. and {Breitling}, F. and {van de Brink}, R.~H. and {Broderick}, J. and {Broekema}, P.~C. and {Brouw}, W.~N. and {Br{\"u}ggen}, M. and {Butcher}, H.~R. and {van Cappellen}, W. and {Ciardi}, B. and {Coenen}, T. and {Conway}, J. and {Coolen}, A. and {Corstanje}, A. and {Damstra}, S. and {Davies}, O. and {Deller}, A.~T. and {Dettmar}, R. -J. and {van Diepen}, G. and {Dijkstra}, K. and {Donker}, P. and {Doorduin}, A. and {Dromer}, J. and {Drost}, M. and {van Duin}, A. and {Eisl{\"o}ffel}, J. and {van Enst}, J. and {Ferrari}, C. and {Frieswijk}, W. and {Gankema}, H. and {Garrett}, M.~A. and {de Gasperin}, F. and {Gerbers}, M. and {de Geus}, E. and {Grie{\ss}meier}, J. -M. and {Grit}, T. and {Gruppen}, P. and {Hamaker}, J.~P. and {Hassall}, T. and {Hoeft}, M. and {Holties}, H.~A. and {Horneffer}, A. and {van der Horst}, A. and {van Houwelingen}, A. and {Huijgen}, A. and {Iacobelli}, M. and {Intema}, H. and {Jackson}, N. and {Jelic}, V. and {de Jong}, A. and {Juette}, E. and {Kant}, D. and {Karastergiou}, A. and {Koers}, A. and {Kollen}, H. and {Kondratiev}, V.~I. and {Kooistra}, E. and {Koopman}, Y. and {Koster}, A. and {Kuniyoshi}, M. and {Kramer}, M. and {Kuper}, G. and {Lambropoulos}, P. and {Law}, C. and {van Leeuwen}, J. and {Lemaitre}, J. and {Loose}, M. and {Maat}, P. and {Macario}, G. and {Markoff}, S. and {Masters}, J. and {McFadden}, R.~A. and {McKay-Bukowski}, D. and {Meijering}, H. and {Meulman}, H. and {Mevius}, M. and {Middelberg}, E. and {Millenaar}, R. and {Miller-Jones}, J.~C.~A. and {Mohan}, R.~N. and {Mol}, J.~D. and {Morawietz}, J. and {Morganti}, R. and {Mulcahy}, D.~D. and {Mulder}, E. and {Munk}, H. and {Nieuwenhuis}, L. and {van Nieuwpoort}, R. and {Noordam}, J.~E. and {Norden}, M. and {Noutsos}, A. and {Offringa}, A.~R. and {Olofsson}, H. and {Omar}, A. and {Orr{\'u}}, E. and {Overeem}, R. and {Paas}, H. and {Pandey-Pommier}, M. and {Pandey}, V.~N. and {Pizzo}, R. and {Polatidis}, A. and {Rafferty}, D. and {Rawlings}, S. and {Reich}, W. and {de Reijer}, J. -P. and {Reitsma}, J. and {Renting}, G.~A. and {Riemers}, P. and {Rol}, E. and {Romein}, J.~W. and {Roosjen}, J. and {Ruiter}, M. and {Scaife}, A. and {van der Schaaf}, K. and {Scheers}, B. and {Schellart}, P. and {Schoenmakers}, A. and {Schoonderbeek}, G. and {Serylak}, M. and {Shulevski}, A. and {Sluman}, J. and {Smirnov}, O. and {Sobey}, C. and {Spreeuw}, H. and {Steinmetz}, M. and {Sterks}, C.~G.~M. and {Stiepel}, H. -J. and {Stuurwold}, K. and {Tagger}, M. and {Tang}, Y. and {Tasse}, C. and {Thomas}, I. and {Thoudam}, S. and {Toribio}, M.~C. and {van der Tol}, B. and {Usov}, O. and {van Veelen}, M. and {van der Veen}, A. -J. and {ter Veen}, S. and {Verbiest}, J.~P.~W. and {Vermeulen}, R. and {Vermaas}, N. and {Vocks}, C. and {Vogt}, C. and {de Vos}, M. and {van der Wal}, E. and {van Weeren}, R. and {Weggemans}, H. and {Weltevrede}, P. and {White}, S. and {Wijnholds}, S.~J. and {Wilhelmsson}, T. and {Wucknitz}, O. and {Yatawatta}, S. and {Zarka}, P. and {Zensus}, A. and {van Zwieten}, J.},
+  title         = {{LOFAR: The LOw-Frequency ARray}},
+  journal       = {Astronomy \& Astrophysics},
+  keywords      = {instrumentation: interferometers, radio continuum: general, radio lines: general, dark ages, reionization, first stars, telescopes, Astrophysics - Instrumentation and Methods for Astrophysics},
+  year          = 2013,
+  month         = aug,
+  volume        = {556},
+  eid           = {A2},
+  pages         = {A2},
+  doi           = {10.1051/0004-6361/201220873},
+  archiveprefix = {arXiv},
+  eprint        = {1305.3550},
+  primaryclass  = {astro-ph.IM},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2013A&A...556A...2V},
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@article{PhysRevD.93.122005,
+  title         = {Energy estimation of cosmic rays with the Engineering Radio Array of the Pierre Auger Observatory},
+  author        = {Aab, A. and Abreu, P. and Aglietta, M. and Ahn, E. J. and Al Samarai, I. and Albuquerque, I. F. M. and Allekotte, I. and Allison, P. and Almela, A. and Alvarez Castillo, J. and Alvarez-Mu\~niz, J. and Alves Batista, R. and Ambrosio, M. and Aminaei, A. and Anastasi, G. A. and Anchordoqui, L. and Andringa, S. and Aramo, C. and Arqueros, F. and Arsene, N. and Asorey, H. and Assis, P. and Aublin, J. and Avila, G. and Awal, N. and Badescu, A. M. and Baus, C. and Beatty, J. J. and Becker, K. H. and Bellido, J. A. and Berat, C. and Bertaina, M. E. and Bertou, X. and Biermann, P. L. and Billoir, P. and Blaess, S. G. and Blanco, A. and Blanco, M. and Blazek, J. and Bleve, C. and Bl\"umer, H. and Boh\'a\ifmmode \check{c}\else \v{c}\fi{}ov\'a, M. and Boncioli, D. and Bonifazi, C. and Borodai, N. and Brack, J. and Brancus, I. and Bretz, T. and Bridgeman, A. and Brogueira, P. and Buchholz, P. and Bueno, A. and Buitink, S. and Buscemi, M. and Caballero-Mora, K. S. and Caccianiga, B. and Caccianiga, L. and Candusso, M. and Caramete, L. and Caruso, R. and Castellina, A. and Cataldi, G. and Cazon, L. and Cester, R. and Chavez, A. G. and Chiavassa, A. and Chinellato, J. A. and Chudoba, J. and Cilmo, M. and Clay, R. W. and Cocciolo, G. and Colalillo, R. and Coleman, A. and Collica, L. and Coluccia, M. R. and Concei\ifmmode \mbox{\c{c}}\else \c{c}\fi{}\~ao, R. and Contreras, F. and Cooper, M. J. and Cordier, A. and Coutu, S. and Covault, C. E. and Cronin, J. and Dallier, R. and Daniel, B. and Dasso, S. and Daumiller, K. and Dawson, B. R. and de Almeida, R. M. and de Jong, S. J. and De Mauro, G. and de Mello Neto, J. R. T. and De Mitri, I. and de Oliveira, J. and de Souza, V. and del Peral, L. and Deligny, O. and Dhital, N. and Di Giulio, C. and Di Matteo, A. and Diaz, J. C. and D\'{\i}az Castro, M. L. and Diogo, F. and Dobrigkeit, C. and Docters, W. and D'Olivo, J. C. and Dorofeev, A. and Dorosti Hasankiadeh, Q. and dos Anjos, R. C. and Dova, M. T. and Ebr, J. and Engel, R. and Erdmann, M. and Erfani, M. and Escobar, C. O. and Espadanal, J. and Etchegoyen, A. and Falcke, H. and Fang, K. and Farrar, G. and Fauth, A. C. and Fazzini, N. and Ferguson, A. P. and Fick, B. and Figueira, J. M. and Filevich, A. and Filip\ifmmode \check{c}\else \v{c}\fi{}i\ifmmode \check{c}\else \v{c}\fi{}, A. and Fratu, O. and Freire, M. M. and Fujii, T. and Garc\'{\i}a, B. and Garcia-Gamez, D. and Garcia-Pinto, D. and Gate, F. and Gemmeke, H. and Gherghel-Lascu, A. and Ghia, P. L. and Giaccari, U. and Giammarchi, M. and Giller, M. and G\l{}as, D. and Glaser, C. and Glass, H. and Golup, G. and G\'omez Berisso, M. and G\'omez Vitale, P. F. and Gonz\'alez, N. and Gookin, B. and Gordon, J. and Gorgi, A. and Gorham, P. and Gouffon, P. and Griffith, N. and Grillo, A. F. and Grubb, T. D. and Guarino, F. and Guedes, G. P. and Hampel, M. R. and Hansen, P. and Harari, D. and Harrison, T. A. and Hartmann, S. and Harton, J. L. and Haungs, A. and Hebbeker, T. and Heck, D. and Heimann, P. and Herve, A. E. and Hill, G. C. and Hojvat, C. and Hollon, N. and Holt, E. and Homola, P. and H\"orandel, J. R. and Horvath, P. and Hrabovsk\'y, M. and Huber, D. and Huege, T. and Insolia, A. and Isar, P. G. and Jandt, I. and Jansen, S. and Jarne, C. and Johnsen, J. A. and Josebachuili, M. and K\"a\"ap\"a, A. and Kambeitz, O. and Kampert, K. H. and Kasper, P. and Katkov, I. and Keilhauer, B. and Kemp, E. and Kieckhafer, R. M. and Klages, H. O. and Kleifges, M. and Kleinfeller, J. and Krause, R. and Krohm, N. and Kuempel, D. and Kukec Mezek, G. and Kunka, N. and Kuotb Awad, A. W. and LaHurd, D. and Latronico, L. and Lauer, R. and Lauscher, M. and Lautridou, P. and Le Coz, S. and Lebrun, D. and Lebrun, P. and Leigui de Oliveira, M. A. and Letessier-Selvon, A. and Lhenry-Yvon, I. and Link, K. and Lopes, L. and L\'opez, R. and L\'opez Casado, A. and Louedec, K. and Lucero, A. and Malacari, M. and Mallamaci, M. and Maller, J. and Mandat, D. and Mantsch, P. and Mariazzi, A. G. and Marin, V. and Mari\ifmmode \mbox{\c{s}}\else \c{s}\fi{}, I. C. and Marsella, G. and Martello, D. and Martinez, H. and Mart\'{\i}nez Bravo, O. and Martraire, D. and Mas\'{\i}as Meza, J. J. and Mathes, H. J. and Mathys, S. and Matthews, J. and Matthews, J. A. J. and Matthiae, G. and Maurizio, D. and Mayotte, E. and Mazur, P. O. and Medina, C. and Medina-Tanco, G. and Meissner, R. and Mello, V. B. B. and Melo, D. and Menshikov, A. and Messina, S. and Micheletti, M. I. and Middendorf, L. and Minaya, I. A. and Miramonti, L. and Mitrica, B. and Molina-Bueno, L. and Mollerach, S. and Montanet, F. and Morello, C. and Mostaf\'a, M. and Moura, C. A. and Muller, M. A. and M\"uller, G. and M\"uller, S. and Navas, S. and Necesal, P. and Nellen, L. and Nelles, A. and Neuser, J. and Nguyen, P. H. and Niculescu-Oglinzanu, M. and Niechciol, M. and Niemietz, L. and Niggemann, T. and Nitz, D. and Nosek, D. and Novotny, V. and No\ifmmode \check{z}\else \v{z}\fi{}ka, L. and N\'u\~nez, L. A. and Ochilo, L. and Oikonomou, F. and Olinto, A. and Pacheco, N. and Pakk Selmi-Dei, D. and Palatka, M. and Pallotta, J. and Papenbreer, P. and Parente, G. and Parra, A. and Paul, T. and Pech, M. and P\ifmmode \mbox{\c{e}}\else \c{e}\fi{}kala, J. and Pelayo, R. and Pepe, I. M. and Perrone, L. and Petermann, E. and Peters, C. and Petrera, S. and Petrov, Y. and Phuntsok, J. and Piegaia, R. and Pierog, T. and Pieroni, P. and Pimenta, M. and Pirronello, V. and Platino, M. and Plum, M. and Porcelli, A. and Porowski, C. and Prado, R. R. and Privitera, P. and Prouza, M. and Quel, E. J. and Querchfeld, S. and Quinn, S. and Rautenberg, J. and Ravel, O. and Ravignani, D. and Reinert, D. and Revenu, B. and Ridky, J. and Risse, M. and Ristori, P. and Rizi, V. and Rodrigues de Carvalho, W. and Rodriguez Rojo, J. and Rodr\'{\i}guez-Fr\'{\i}as, M. D. and Rogozin, D. and Rosado, J. and Roth, M. and Roulet, E. and Rovero, A. C. and Saffi, S. J. and Saftoiu, A. and Salazar, H. and Saleh, A. and Salesa Greus, F. and Salina, G. and Sanabria Gomez, J. D. and S\'anchez, F. and Sanchez-Lucas, P. and Santos, E. and Santos, E. M. and Sarazin, F. and Sarkar, B. and Sarmento, R. and Sarmiento-Cano, C. and Sato, R. and Scarso, C. and Schauer, M. and Scherini, V. and Schieler, H. and Schmidt, D. and Scholten, O. and Schoorlemmer, H. and Schov\'anek, P. and Schr\"oder, F. G. and Schulz, A. and Schulz, J. and Schumacher, J. and Sciutto, S. J. and Segreto, A. and Settimo, M. and Shadkam, A. and Shellard, R. C. and Sigl, G. and Sima, O. and \ifmmode \acute{S}\else \'{S}\fi{}mia\l{}kowski, A. and \ifmmode \check{S}\else \v{S}\fi{}m\'{\i}da, R. and Snow, G. R. and Sommers, P. and Sonntag, S. and Sorokin, J. and Squartini, R. and Srivastava, Y. N. and Stanca, D. and Stani\ifmmode \check{c}\else \v{c}\fi{}, S. and Stapleton, J. and Stasielak, J. and Stephan, M. and Stutz, A. and Suarez, F. and Suarez Dur\'an, M. and Suomij\"arvi, T. and Supanitsky, A. D. and Sutherland, M. S. and Swain, J. and Szadkowski, Z. and Taborda, O. A. and Tapia, A. and Tepe, A. and Theodoro, V. M. and Timmermans, C. and Todero Peixoto, C. J. and Toma, G. and Tomankova, L. and Tom\'e, B. and Tonachini, A. and Torralba Elipe, G. and Torres Machado, D. and Travnicek, P. and Trini, M. and Ulrich, R. and Unger, M. and Urban, M. and Vald\'es Galicia, J. F. and Vali\~no, I. and Valore, L. and van Aar, G. and van Bodegom, P. and van den Berg, A. M. and van Velzen, S. and van Vliet, A. and Varela, E. and Vargas C\'ardenas, B. and Varner, G. and Vasquez, R. and V\'azquez, J. R. and V\'azquez, R. A. and Veberi\ifmmode \check{c}\else \v{c}\fi{}, D. and Verzi, V. and Vicha, J. and Videla, M. and Villase\~nor, L. and Vlcek, B. and Vorobiov, S. and Wahlberg, H. and Wainberg, O. and Walz, D. and Watson, A. A. and Weber, M. and Weidenhaupt, K. and Weindl, A. and Welling, C. and Werner, F. and Widom, A. and Wiencke, L. and Wilczy\ifmmode \acute{n}\else \'{n}\fi{}ski, H. and Winchen, T. and Wittkowski, D. and Wundheiler, B. and Wykes, S. and Yang, L. and Yapici, T. and Yushkov, A. and Zas, E. and Zavrtanik, D. and Zavrtanik, M. and Zepeda, A. and Zimmermann, B. and Ziolkowski, M. and Zuccarello, F.},
+  collaboration = {Pierre Auger Collaboration},
+  journal       = {Phys. Rev. D},
+  volume        = {93},
+  issue         = {12},
+  pages         = {122005},
+  numpages      = {15},
+  year          = {2016},
+  month         = {Jun},
+  publisher     = {American Physical Society},
+  doi           = {10.1103/PhysRevD.93.122005},
+  url           = {https://link.aps.org/doi/10.1103/PhysRevD.93.122005}
+}
+@misc{fang2017giantradioarrayneutrino,
+  title         = {The Giant Radio Array for Neutrino Detection (GRAND): Present and Perspectives},
+  author        = {Ke Fang and Jaime Álvarez-Muñiz and Rafael Alves Batista and Mauricio Bustamante and Washington Carvalho and Didier Charrier and Ismaël Cognard and Sijbrand De Jong and Krijn D. de Vries and Chad Finley and Quanbu Gou and Junhua Gu and Claire Guépin and Jordan Hanson and Hongbo Hu and Kumiko Kotera and Sandra Le Coz and Yi Mao and Olivier Martineau-Huynh and Clementina Medina and Miguel Mostafa and Fabrice Mottez and Kohta Murase and Valentin Niess and Foteini Oikonomou and Frank Schröder and Cyril Tasse and Charles Timmermans and Nicolas Renault-Tinacci and Matías Tueros and Xiang-Ping Wu and Philippe Zarka and Andreas Zech and Yi Zhang and Qian Zheng and Anne Zilles},
+  year          = {2017},
+  eprint        = {1708.05128},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.IM},
+  url           = {https://arxiv.org/abs/1708.05128}
+}
+@article{1953Natur.171..349G,
+  author  = {{Galbraith}, W. and {Jelley}, J.~V.},
+  title   = {{Light Pulses from the Night Sky associated with Cosmic Rays}},
+  journal = {Nature},
+  year    = 1953,
+  month   = feb,
+  volume  = {171},
+  number  = {4347},
+  pages   = {349-350},
+  doi     = {10.1038/171349a0},
+  adsurl  = {https://ui.adsabs.harvard.edu/abs/1953Natur.171..349G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@article{1965ICRC....2..738B,
+  author    = {{Bagge}, E. and {B{\"o}hm}, E. and {Fritze}, R. and {Roose}, U.~J. and {Samorski}, M. and {Schnier}, C. and {Staubert}, R. and {Thielheim}, K.~O. and {Tr{\"u}mper}, J. and {Wiedecke}, L. and {Wolter}, W.},
+  title     = {{The extensive air shower experiment at Kiel.}},
+  booktitle = {{International Cosmic Ray Conference}},
+  year      = 1965,
+  series    = {International Cosmic Ray Conference},
+  volume    = {1},
+  month     = jan,
+  pages     = {738},
+  url    = {https://ui.adsabs.harvard.edu/abs/1965ICRC....2..738B},
+  adsnote   = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@article{Linsley1961485,
+  author            = {Linsley, John and Scarsi, Livio and Rossi, Bruno},
+  title             = {Extremely energetic cosmic-ray event},
+  year              = {1961},
+  journal           = {Physical Review Letters},
+  volume            = {6},
+  number            = {9},
+  pages             = {485 – 487},
+  doi               = {10.1103/PhysRevLett.6.485},
+  url               = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-4244058634&doi=10.1103%2fPhysRevLett.6.485&partnerID=40&md5=5741b7821c94f79cff419ba9768039c8},
+  type              = {Article},
+  publication_stage = {Final},
+  source            = {Scopus},
+  note              = {Cited by: 62}
+}
+@article{article_b_MESONS,
+  author  = {Bueno, A. and Gascón, Alberto and Illana, J. and Masip, M.},
+  year    = {2011},
+  month   = {09},
+  pages   = {},
+  title   = {Propagation of B mesons in the atmosphere},
+  volume  = {2012},
+  journal = {Journal of Cosmology and Astroparticle Physics},
+  doi     = {10.1088/1475-7516/2012/02/028}
 }
 @inproceedings{Blobel:2002ax,
   author        = {Blobel, Volker and Kleinwort, Claus},
